--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <hl>heading</hl>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat consequuntur neque dicta eum error porro dolorum doloribus explicabo facilis unde voluptatem sit quasi suscipit, quo ipsum quibusdam reprehenderit quaerat molestias.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta modi magnam hic, commodi soluta neque, accusamus sapiente at amet nesciunt omnis dignissimos reprehenderit corporis asperiores fugiat? Nulla fugiat consequuntur optio.</p>
-    
+
 </body>
 </html>
